Utilizar padrão Builder nos Mappers